Add files for pr_9_7_nd4j_ops